--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: phishing-sim
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120 --workers 2
     envVars:
       - key: SECRET_KEY
         generateValue: true
